xx/xx/2007 - 2.0.1

	- Avoid endless loop when try to mount highly damaged volume with
	  nubmer of sectors set to 0.  (Yura, reported by Erik Larsson)
	- Raise FUSE dependency to 2.7.0 because we use user option in
	  ntfsmount.  (Yura, reported by Andrey Rahmatullin)
	- ntfsck: Use ntfs_pread instead ops->pread.  (Yura, reported by
	  Christophe GRENIER)

28/09/2007 - 2.0.0 - ntfsmount sports full read/write, libntfs can read
		     encrypted files and ntfsresize supports Vista.

	- ntfsmount now creates files and directories with security descriptor
	  that grant full access to everyone.  (Yura)
	- Fix typo that lead to incorrect sparse file size calculation.  (Yuval)
	- Fix long standing stupendously stupid bug in libntfs/attrib.c::
	  ntfs_external_attr_find() and also port a bugfix from the advanced
	  ntfs kernel driver to the same function.  (Anton)
	- Add new API ntfs_attr_exist() that checks whether attribute with
	  selected type and name already present in inode.  (Szaka)
	- Extend ntfs_index_{add_filename,rm} to support almost all cases of
	  index operations.  (Szaka)
	- Support index operations when index root is in the base MFT
	  record.  (Yura)
	- calloc/malloc -> ntfs_{calloc,malloc} conversions.  (Szaka)
	- ntfsclone: don't create image files with executable bit set.  (Szaka)
	- ntfsclone: metadata cloning: write out extent records.  (Szaka)
	- ntfsclone: fix sometimes missing error messages and be more
	  detailed.  (Szaka)
	- ntfsclone: fix crash in wipe_index_allocation_timestamps(): don't
	  dump empty index allocation attribute.  (Szaka)
	- ntfscmp: fine grained AT_INDEX_ALLOCATION comparison.  (Szaka)
	- ntfsinfo: rename 'Flags:' fields to be unique.  (Szaka)
	- ntfsinfo: add ntfs_dump_index_header(); dump full index attribute
	  INDEX_HEADER.  (Szaka)
	- ntfsinfo: add ntfs_dump_index_block() and use it.  (Szaka)
	- ntfsinfo: fix output indenting.  (Szaka)
	- ntfsinfo: make stdout line buffered.  (Szaka)