@@ -6,6 +6,8 @@ xx/xx/2007 - 2.0.1
 	  ntfsmount.  (Yura, reported by Andrey Rahmatullin)
 	- ntfsck: Use ntfs_pread instead ops->pread.  (Yura, reported by
 	  Christophe GRENIER)
+	- ntfsclone: Allow metadata cloning to block devices when --force
+	  option is supplied.  (Anton)
 
 28/09/2007 - 2.0.0 - ntfsmount sports full read/write, libntfs can read
 		     encrypted files and ntfsresize supports Vista.
